修改目录结构

--- a/src/components/introduction/introduction.less
+++ b/src/components/introduction/introduction.less
@@ -18,7 +18,7 @@
   border-radius: 10px;
   .text{
     margin-top: 20px;
-    display: flex;
+    // display: flex;
     &-left{
       width: 50%;
     }
