--- a/src/components/header/header.less
+++ b/src/components/header/header.less
@@ -1,58 +1,101 @@
+body{
+  overflow: hidden;
+}
 .header {
-  width: calc(100% - 200px);
-  height: 80px;
+  // width: calc(100% - 200px);
+  display: table;
+  position: relative;
+  width: 100%;
+  height: 56px;
   background-color: #fff;
-  position: fixed;
   z-index: 100;
+  padding: 0 24px;
 
-  &-top {
-    height: 40px;
-    line-height: 40px;
-    padding-right: 30px;
-    text-align: right;
-    border-bottom: 1px solid #1890ff;
+  .page-title {
+    display: table-cell;
+    vertical-align: middle;
+    color: #333;
+    font-size: 14px;
+    font-weight: 600;
+    padding: 10px 0;
+  }
 
-    span {
-      margin-right: 10px;
+  .header-right {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    float: right;
+
+    .currentTime{
+      margin-right: 15px;
+      font-weight: 500;
     }
-    .logout{
+
+    .anticon:hover {
+      color: #333;
+    }
+
+    .anticon-global {
+      margin-right: 15px;
+
+      svg {
+        width: 1.5em !important;
+        height: 1.5em !important;
+        cursor: pointer;
+      }
+    }
+
+    .anticon-question-circle {
+      margin-right: 15px;
+
+      svg {
+        width: 1.5em !important;
+        height: 1.5em !important;
+        cursor: pointer;
+      }
+    }
+
+    .logout {
       cursor: pointer;
+      color: #999999;
+      font-size: 14px;
+      font-weight: 600;
+
+      &:hover {
+        color: red;
+      }
     }
-    .logout:hover{
+  }
+}
+
+.about-content {
+  margin: 0 auto;
+  width: 90%;
+  text-align: center;
+
+  .table-title {
+    font-size: 16px;
+    line-height: 21px;
+    font-weight: bold;
+    color: #000;
+    margin-bottom: 15px;
+  }
+
+  .ant-table-wrapper {
+    margin: 0 auto;
+  }
+
+  .ant-table-thead {
+    tr>th {
+      text-align: center;
+      color: #1F2D3D;
       font-weight: bold;
     }
   }
 
-  &-bottom {
-    height: 40px;
-    display: flex;
-    align-items: center;
-    &-left{
-      position: relative;
-      width: 25%;
+  .ant-table-tbody {
+    tr>td {
       text-align: center;
-      font-size: 20px;
-      &::after{
-        content: '';
-        position: absolute;
-        right: 50%;
-        top: 100%;
-        transform: translateX(50%);
-        border-top: 20px solid white;
-        border-right: 20px solid transparent;
-        border-bottom: 20px solid transparent;
-        border-left: 20px solid transparent;
-      }
-    }
-    &-right{
-      width: 75%;
-      text-align: right;
-      margin-right: 30px;
-      img{
-        margin: 0 15px;
-        width: 30px;
-        height: 20px;
-      }
     }
   }
 }
